# SafeClaw

./: .env.example  .gitignore  README.md  ROADMAP_TODO.md  guided-install.sh  install.sh  pyproject.toml  requirements.txt  wrangler.jsonc
.github/: FUNDING.yml
mac-app/: README.md  package-lock.json  package.json  run-local.command
mac-app/scripts/: capture-screenshots.js
mac-app/src/: index.html  main.js  preload.js  renderer.js  styles.css
mac-setup/: README.md  SafeClaw Setup.command
openclaw/: agent.py  cli.py  config.py  llm.py  tools.py
safeclaw/: agent.py  cli.py  config.py  database.py  doctor.py  llm.py  providers.py  service.py  sessions.py  telegram.py  tools.py  whatsapp.py
scripts/: build-mac-runtime.sh  build-site.sh  release-mac-dmg.sh
site/: README.md  api.html  docs.html  index.html  install.html  mac-app.html  roadmap.html  robots.txt  site.webmanifest  sitemap.xml
site/assets/: site.js  styles.css
tests/: conftest.py  test_cli_commands.py  test_database.py  test_installers.py  test_live_unmocked.py  test_mac_app.py  test_mac_setup.py  test_memory_handler.py  test_providers.py  test_telegram.py  test_tools_sessions_doctor.py
