[project]
name = "safeclaw"
version = "0.1.0"
description = "SafeClaw: a self-hosted agent with explicit permissions"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "rich>=13.7.1",
  "typer>=0.12.5"
]

[project.scripts]
safeclaw = "safeclaw.cli:app"

[tool.setuptools.packages.find]
include = ["safeclaw*"]
