[project]
name = "safeclaw"
version = "0.1.0"
description = "SafeClaw: a self-hosted agent with explicit permissions"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "rich>=13.7.1",
  "typer>=0.12.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]

[project.scripts]
safeclaw = "safeclaw.cli:app"

[tool.setuptools.packages.find]
include = ["safeclaw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "live: tests that run without mocks and may depend on local config or services"
]

[tool.coverage.run]
branch = true
source = ["safeclaw"]

[tool.coverage.report]
show_missing = true
skip_covered = true
